# docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/admin/change_pwd": {
+        "/api/admin/change_pwd": {
             "post": {
                 "security": [
                     {
@@ -55,7 +55,7 @@
                 }
             }
         },
-        "/admin/info": {
+        "/api/admin/info": {
             "get": {
                 "security": [
                     {
@@ -95,7 +95,7 @@
                 }
             }
         },
-        "/admin/{id}": {
+        "/api/admin/{id}": {
             "delete": {
                 "security": [
                     {
@@ -144,7 +144,7 @@
                 }
             }
         },
-        "/admin_login/login": {
+        "/api/admin_login/login": {
             "post": {
                 "description": "管理员登录",
                 "consumes": [
@@ -190,7 +190,7 @@
                 }
             }
         },
-        "/admin_login/register": {
+        "/api/admin_login/register": {
             "post": {
                 "description": "管理员注册",
                 "consumes": [
@@ -236,7 +236,7 @@
                 }
             }
         },
-        "/service/list": {
+        "/api/service/list": {
             "get": {
                 "security": [
                     {
@@ -298,7 +298,7 @@
                 }
             }
         },
-        "/service/service_add_http": {
+        "/api/service/service_add_http": {
             "post": {
                 "security": [
                     {
@@ -349,7 +349,7 @@
                 }
             }
         },
-        "/service/service_update_http": {
+        "/api/service/service_update_http": {
             "post": {
                 "security": [
                     {
@@ -400,7 +400,7 @@
                 }
             }
         },
-        "/service/{id}": {
+        "/api/service/{id}": {
             "get": {
                 "security": [
                     {
@@ -567,13 +567,13 @@
         "schemas.AdminInfoOutput": {
             "type": "object",
             "properties": {
-                "id": {
-                    "type": "integer"
-                },
-                "login_time": {
+                "nickName": {
                     "type": "string"
                 },
-                "name": {
+                "userId": {
+                    "type": "integer"
+                },
+                "userName": {
                     "type": "string"
                 }
             }
@@ -607,10 +607,20 @@
         "schemas.AdminRegisterInput": {
             "type": "object",
             "required": [
+                "confirmPwd",
+                "nickname",
                 "password",
                 "username"
             ],
             "properties": {
+                "confirmPwd": {
+                    "type": "string",
+                    "example": "123456"
+                },
+                "nickname": {
+                    "type": "string",
+                    "example": "管理员"
+                },
                 "password": {
                     "type": "string",
                     "example": "123456"
@@ -677,21 +687,44 @@
         },
         "schemas.ServiceItemOutput": {
             "type": "object",
+            "required": [
+                "rule",
+                "service_desc",
+                "service_name"
+            ],
             "properties": {
                 "id": {
                     "type": "integer"
+                },
+                "need_websocket": {
+                    "description": "是否支持websocket",
+                    "type": "integer",
+                    "maximum": 1,
+                    "minimum": 0,
+                    "example": 0
+                },
+                "rule": {
+                    "description": "域名或者前缀",
+                    "type": "string",
+                    "example": "类似/xxx/"
                 },
                 "service_addr": {
                     "type": "string"
                 },
                 "service_desc": {
-                    "type": "string"
+                    "description": "服务描述",
+                    "type": "string",
+                    "maxLength": 255,
+                    "minLength": 1
                 },
                 "service_name": {
+                    "description": "服务名",
                     "type": "string"
                 },
-                "service_rewrite": {
-                    "type": "string"
+                "url_rewrite": {
+                    "description": "url重写功能",
+                    "type": "string",
+                    "example": "http://xx.xx.xx.xx:oo/"
                 }
             }
         },
@@ -719,7 +752,7 @@
             ],
             "properties": {
                 "id": {
-                    "description": "服务ID",
+                    "description": "服务ID \t//header转换",
                     "type": "integer",
                     "minimum": 1,
                     "example": 62
@@ -728,28 +761,28 @@
                     "description": "是否支持websocket",
                     "type": "integer",
                     "maximum": 1,
-                    "minimum": 0
+                    "minimum": 0,
+                    "example": 0
                 },
                 "rule": {
-                    "description": "域名或者前缀 \t//启用strip_uri",
+                    "description": "域名或者前缀",
                     "type": "string",
-                    "example": "/test_http_service_indb"
+                    "example": "类似/xxx/"
                 },
                 "service_desc": {
                     "description": "服务描述",
                     "type": "string",
                     "maxLength": 255,
-                    "minLength": 1,
-                    "example": "test_http_service_indb"
+                    "minLength": 1
                 },
                 "service_name": {
                     "description": "服务名",
-                    "type": "string",
-                    "example": "test_http_service_indb"
+                    "type": "string"
                 },
                 "url_rewrite": {
-                    "description": "header转换",
-                    "type": "string"
+                    "description": "url重写功能",
+                    "type": "string",
+                    "example": "http://xx.xx.xx.xx:oo/"
                 }
             }
         }
