# models/admin.go
@@ -12,6 +12,7 @@ import (
 type Admin struct {
 	ID        int       `json:"id" gorm:"primary_key" description:"自增主键"`
 	UserName  string    `json:"user_name" gorm:"column:user_name" description:"管理员用户名"`
+	NickName  string    `json:"nick_name" gorm:"column:nick_name" description:"用户昵称"`
 	Password  string    `json:"password" gorm:"column:password" description:"密码"`
 	UpdatedAt time.Time `json:"update_at" gorm:"column:update_at" description:"更新时间"`
 	CreatedAt time.Time `json:"create_at" gorm:"column:create_at" description:"创建时间"`
