# schemas/admin_login.go
@@ -19,8 +19,10 @@ type AdminLoginOutput struct {
 }
 
 type AdminRegisterInput struct {
-	UserName string `json:"username" form:"username" comment:"姓名" example:"admin" validate:"required"`
-	Password string `json:"password" form:"password" comment:"密码" example:"123456" validate:"required"`
+	NickName   string `json:"nickname" form:"nickname" comment:"昵称" example:"管理员" validate:"required"`
+	UserName   string `json:"username" form:"username" comment:"姓名" example:"admin" validate:"required"`
+	Password   string `json:"password" form:"password" comment:"密码" example:"123456" validate:"required"`
+	ConfirmPwd string `json:"confirmPwd" form:"confirmPwd" comment:"确认密码" example:"123456" validate:"required"`
 }
 
 func (param *AdminRegisterInput) BindValidParam(ctx *gin.Context) error {
